# xminecraft

./: .clippy.toml  AGENTS.md  Cargo.toml  GEMINI.md  README.md  fix_lints.py
.github/workflows/: ci.yml
src/: cli.rs  crypto.rs  lib.rs  main.rs  protocol.rs  test_support.rs  tls.rs  whitelist.rs
src/minecraft/: identity.rs  login.rs  mod.rs  play.rs  profile.rs  registry.rs  session.rs  status.rs  tests.rs
src/proxy/: client.rs  config.rs  local.rs  mod.rs  relay.rs  server.rs
src/vless/: mod.rs  tests.rs  types.rs  wire.rs
tests/: crypto_errors.rs  integration.rs
tests/fixtures/: ca.crt  ca.key  ca.srl  server.crt  server.csr  server.key  test.crt  test.key
