[package]
name = "xminecraft"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1"
cfb8 = "0.8"

cipher = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
md-5 = "0.11.0"
rand = "0.8"
rsa = "0.9"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.37", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
valence_protocol = { version = "0.2.0-alpha.1", features = ["encryption"] }
